VFS-9036 Fixed charts cropping

--- a/app/styles/onedata-gui-common/components/modals/workflow-visualiser/store-modal/time-series-presenter.scss
+++ b/app/styles/onedata-gui-common/components/modals/workflow-visualiser/store-modal/time-series-presenter.scss
@@ -16,4 +16,10 @@
       border-radius: $border-radius-base;
     }
   }
+
+  @media (max-width: $screen-xs-max) {
+    &.has-charts {
+      grid-template-columns: 1fr;
+    }
+  }
 }
